board distortion fixed

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -22,3 +22,9 @@ tr, td {
   margin: 0px;
   padding: 0px;
 }
+
+td {
+  width: 60px;
+  height: 60px;
+  padding: 0px;
+}
